<resources>
    <string name="app_name">Butler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="network_error_message">情報の取得に失敗しました</string>
    <string name="retry">再試行</string>

    <string name="build_number_format_text">#%1$d</string>
    <string name="latest_list_duration_format_text_ms">%1$d ミリ秒</string>
    <string name="latest_list_duration_format_text_s">%1$d 秒</string>
    <string name="latest_list_duration_format_text_m">%1$d 分</string>
    <string name="latest_list_duration_format_text_h">%1$d 時間</string>
    <string name="latest_list_duration_format_text_d">%1$d 日</string>

    <string name="latest_list_timestamp_format_text_s">%1$d 秒前</string>
    <string name="latest_list_timestamp_format_text_m">%1$d 分前</string>
    <string name="latest_list_timestamp_format_text_h">%1$d 時間前</string>
    <string name="latest_list_timestamp_format_text_d">%1$d 日前</string>

    <string name="build_list_description_format_text">%1$s - %2$s, %3$s</string>
    <string name="build_list_description_format_text_short">%1$s - %2$s</string>
    <string name="build_list_build_on_format_text">%1$s 上で実行</string>

    <string name="project_timestamp_description">%1$sにビルドが行われました</string>
    <string name="project_timestamp_nan_description">不明</string>
    <string name="project_detail_duration_description">最終ビルドの所要時間は %1$sでした</string>

    <string name="latest_list_date_format">M 月 d 日 HH:mm:ss</string>
    <string name="latest_list_published_date">Published at</string>
    <string name="latest_list_updated_date">Updated at</string>
    <string name="title_activity_login">Login</string>

    <string name="all_list_description_format">#%1$d, %2$s</string>

    <string name="latest_fragment_title">Latest</string>
    <string name="failed_fragment_title">Failed</string>
    <string name="title_activity_all">All Build</string>

    <string name="login_url_hint_text">Jenkins Url</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_project_detail">プロジェクトの詳細</string>
    <string name="title_activity_job">プロジェクト一覧</string>

    <string name="job_list_item_detail_button_text">詳細</string>
    <string name="job_list_item_build_button_text">ビルド一覧</string>
    <string name="title_activity_build">ビルド一覧</string>

    <string name="job_list_item_build_stability">ビルドの安定性</string>

    <string name="project_detail_build_stability">ビルドの安定性</string>
    <string name="project_detail_build_status">ビルドステータス</string>
    <string name="project_detail_build_downstream">下流プロジェクト</string>
    <string name="project_detail_build_upstream">上流プロジェクト</string>

    <string name="determinate_progress_format_text">%1$d %%</string>

    <string name="computer_list_item_description_format_text">%1$s - %2$s</string>
    <string name="computer_list_item_offline">オフライン</string>
    <string name="computer_list_item_online">オンライン</string>
    <string name="computer_list_diff_delay_format_text">-%1$s</string>
    <string name="computer_list_diff_haste_format_text">+%1$s</string>
    <string name="computer_list_diff_equal_format_text">同期中</string>
    <string name="computer_list_diff_nan_format_text">不明</string>

    <string name="main_drawer_item_view">ビュー</string>
    <string name="main_drawer_item_computer">コンピューター</string>
    <string name="main_drawer_item_user">ユーザー</string>

    <string name="username_hint_text">ユーザー名</string>
    <string name="api_token_hint_text">API Token</string>
    <string name="signin_advanced">認証が必要</string>
    <string name="title_activity_computer_detail">ノード詳細</string>

    <string name="computer_detail_response_time">応答時間</string>
    <string name="computer_detail_clock_time">クロック誤差</string>

    <string name="computer_detail_description_format_text">\u0020- %1$s</string>
    <string name="computer_detail_executors">ビルド実行状態</string>

    <string name="computer_detail_disk_space">ディスク容量</string>
    <string name="computer_detail_swap_space">スワップ容量</string>
    <string name="computer_detail_temp_space">テンポラリ容量</string>
    <string name="computer_detail_memory_space">メモリ容量</string>

    <string name="computer_detail_busy_exe">ビジーエグゼキューター数</string>
    <string name="computer_detail_total_exe">エグゼキューター総数</string>
    <string name="computer_detail_queue_exe">ビルドキュー数</string>

    <string name="computer_detail_memory_format_m">%1$d M</string>
    <string name="computer_detail_memory_format_g">%1$d G</string>
    <string name="title_activity_exec_build">ビルド実行</string>

    <string name="exec_build_list_item_dialog_positive_button">OK</string>

    <string name="main_drawer_menu_setting">設定</string>
    <string name="main_drawer_menu_sign_out">サインアウト</string>

    <string name="executor_list_item_empty">なし</string>

    <string name="setting_user_list_title">ユーザー一覧を表示する</string>
    <string name="setting_user_list_description">一覧の取得でタイムアウトが発生する場合、自動的に無効化されます。</string>

    <string name="sign_in_failure_dialog_title">サインインできませんでした</string>
    <string name="sign_in_failure_dialog_message">URL の形式が正しいか確認してください。</string>
    <string name="sign_in_failure_dialog_message_advanced">ユーザー名と API Token が入力されているか、URL の形式が正しいか確認してください。</string>
    <string name="dialog_button_close">閉じる</string>

    <string name="user_list_failure_dialog_title">接続がタイムアウトしました</string>
    <string name="user_list_failure_dialog_message">登録ユーザー数が多いようです。次回起動時からユーザー一覧は非表示になります。表示設定の変更は設定から行ってください。</string>
</resources>
