<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_view_list_black_24px"
            android:title="@string/main_drawer_item_view"/>
        <item
            android:id="@+id/nav_computer"
            android:icon="@drawable/ic_computer_black_24px"
            android:title="@string/main_drawer_item_computer"/>
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_supervisor_account_black_24px"
            android:title="@string/main_drawer_item_user"/>
    </group>

    <item android:title="Config">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/main_drawer_menu_setting"/>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit_to_app_black_24px"
                android:title="@string/main_drawer_menu_sign_out" />
        </menu>
    </item>

</menu>
