<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="vm"
            type="jp.cordea.butler.viewmodel.JobListItemViewModel" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/job_card_margin"
        android:layout_marginStart="@dimen/job_card_margin"
        android:layout_marginEnd="@dimen/job_card_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="@dimen/job_list_item_vertical_margin"
                android:layout_marginEnd="@dimen/job_list_item_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_marginBottom="@dimen/job_list_item_header_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginTop="@dimen/job_list_item_title_top_margin"
                        android:layout_marginEnd="@dimen/job_list_item_title_end_margin"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@{vm.title}"
                            android:textSize="@dimen/job_list_item_title_text_size"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/primaryText"
                            android:layout_gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:layout_marginTop="@dimen/job_list_item_timestamp_top_margin"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                style="@style/IconActive"
                                android:src="@drawable/ic_history_black_24px"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:id="@+id/duration"
                                android:text="@{vm.timestamp}"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:layout_marginStart="@dimen/job_list_item_status_top_margin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </LinearLayout>

                    <jp.cordea.butler.view.ColorStatusCircleView
                        app:status="@{vm.color}"
                        app:fullText="@{false}"
                        android:layout_marginTop="@dimen/job_list_item_status_top_margin"
                        android:layout_gravity="end"
                        android:layout_width="@dimen/job_list_item_status_size"
                        android:layout_height="@dimen/job_list_item_status_size" />

                </FrameLayout>

                <TextView
                    android:text="@string/job_list_item_build_stability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:progress="@{vm.score}"
                    android:layout_marginBottom="@dimen/job_list_item_progress_horizontal_margin"
                    android:layout_marginTop="@dimen/job_list_item_progress_horizontal_margin"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/job_list_item_button_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatButton
                    style="?attr/buttonBarButtonStyle"
                    android:id="@+id/detail_button"
                    android:text="@string/job_list_item_detail_button_text"
                    android:onClick="@{vm.detailButtonOnClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatButton
                    style="?attr/buttonBarButtonStyle"
                    android:id="@+id/build_button"
                    android:text="@string/job_list_item_build_button_text"
                    android:onClick="@{vm.buildButtonOnClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>
